gccida/g3/reload_reg_free_for_value_p
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/reload_reg_free_for_value_p/src/reload1.c:5226:9: error: conflicting types for 'reload_reg_free_for_value_p'
_BOOL8  reload_reg_free_for_value_p( 
        ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/reload_reg_free_for_value_p/src/reload1.c:414:12: note: previous declaration is here
static int reload_reg_free_for_value_p  PARAMS ((int, int, int,
           ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/reload_reg_free_for_value_p/src/reload1.c:5369:39: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v23 = ( unsigned int)( *( ( _DWORD *)&mode_class_0 + v20) - 5) <= 1; 
                                      ^~~~~~~~~~~~
                                      mode_class
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/reload_reg_free_for_value_p/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/reload_reg_free_for_value_p/src/obj/reload1.o] Error 1
